--- a/rebar_templates/paris-pg.template
+++ b/rebar_templates/paris-pg.template
@@ -20,13 +20,13 @@
 {template, "paris_README.md", "{{name}}/README.md"}.
 {template, "paris_start.sh", "{{name}}/{{name}}"}.
 {chmod, 8#00770, "{{name}}/{{name}}"}.
-{file, "paris_rebar_pg.config", "{{name}}/rebar.config"}.
+{template, "paris_rebar_pg.config", "{{name}}/rebar.config"}.
 {template, "paris_Makefile", "{{name}}/Makefile"}.
 {file, "paris_gitignore", "{{name}}/.gitignore"}.
-{template, "paris_config", "{{name}}/config/{{name}}.config"}.
+{template, "paris_app.config-pg", "{{name}}/config/{{name}}.config"}.
 {file, "paris_vm.args", "{{name}}/config/vm.args"}.
 {template, "paris_app_src", "{{name}}/apps/{{name}}/src/{{name}}.app.src"}.
-{template, "paris_app_erl", "{{name}}/apps/{{name}}/src/{{name}}.erl"}.
+{template, "paris_app_db_erl", "{{name}}/apps/{{name}}/src/{{name}}.erl"}.
 {file, "paris_index_erl", "{{name}}/apps/{{name}}/src/controller/index.erl"}.
 {template, "paris_index_html", "{{name}}/apps/{{name}}/src/view/index.html"}.
 {file, "paris_img_erlang.png", "{{name}}/apps/{{name}}/priv/static/img/erlang.png"}.
