--- a/rebar_templates/paris_rebar_sqlite.config
+++ b/rebar_templates/paris_rebar_sqlite.config
@@ -16,3 +16,5 @@
   {texas_sqlite, ".*", {git, "https://github.com/emedia-project/texas_sqlite", "master"}},
   {erlydtl, ".*", {git, "https://github.com/evanmiller/erlydtl", {tag, "0.8.0"}}}
 ]}.
+{plugins, [texas_rebar]}.
+{texas, "config/{{ name }}.config"}.
