Refactor install and update

--- a/rebar.config
+++ b/rebar.config
@@ -2,12 +2,13 @@
 {escript_shebang,"#!/usr/bin/env escript\n"}.
 {escript_comment,"%%\n"}.
 {escript_emu_args, "%%! +pc unicode\n"}.
-{escript_incl_apps, [eutils, rebar, erlgit, sh, erlsemver, erlydtl, merl, inflector]}.
+{escript_incl_apps, [eutils, rebar, erlgit, sh, erlsemver, erlydtl, merl, inflector, erlconf]}.
 
 {deps, [
   {eutils, ".*", {git, "https://github.com/emedia-project/eutils", "master"}},
   {rebar, ".*", {git, "https://github.com/rebar/rebar", {tag, "2.5.0"}}},
   {erlgit, ".*", {git, "https://github.com/gleber/erlgit", "master"}},
   {erlydtl, ".*", {git, "https://github.com/erlydtl/erlydtl", "master"}},
-  {inflector, ".*", {git, "https://github.com/azukiapp/inflector", "master"}}
+  {inflector, ".*", {git, "https://github.com/azukiapp/inflector", "master"}},
+  {erlconf, ".*", {git, "https://github.com/emedia-project/erlconf", "master"}}
 ]}.
