--- a/rebar_templates/paris-sqlite.template
+++ b/rebar_templates/paris-sqlite.template
@@ -21,7 +21,7 @@
 {template, "paris_start.sh", "{{name}}/{{name}}"}.
 {chmod, 8#00770, "{{name}}/{{name}}"}.
 {template, "paris_rebar_sqlite.config", "{{name}}/rebar.config"}.
-{template, "paris_Makefile", "{{name}}/Makefile"}.
+{template, "paris_Makefile_texas", "{{name}}/Makefile"}.
 {file, "paris_gitignore", "{{name}}/.gitignore"}.
 {template, "paris_app.config-sqlite", "{{name}}/config/{{name}}.config"}.
 {file, "paris_vm.args", "{{name}}/config/vm.args"}.
