--- a/rebar_templates/paris_rebar.config
+++ b/rebar_templates/paris_rebar.config
@@ -29,6 +29,5 @@
   "apps/*"
 ]}.
 {deps, [
-  {paris, ".*", {git, "https://github.com/emedia-project/paris", "master"}},
-  {erlydtl, ".*", {git, "https://github.com/evanmiller/erlydtl", {tag, "0.9.4"}}}
+  {paris, ".*", {git, "https://github.com/emedia-project/paris", "master"}}
 ]}.
