--- a/rebar_templates/paris_rebar_sqlite.config
+++ b/rebar_templates/paris_rebar_sqlite.config
@@ -31,8 +31,7 @@
 {deps, [
   {paris, ".*", {git, "https://github.com/emedia-project/paris", "master"}},
   {texas, ".*", {git, "https://github.com/emedia-project/texas", "master"}},
-  {texas_sqlite, ".*", {git, "https://github.com/emedia-project/texas_sqlite", "master"}},
-  {erlydtl, ".*", {git, "https://github.com/evanmiller/erlydtl", {tag, "0.9.4"}}}
+  {texas_sqlite, ".*", {git, "https://github.com/emedia-project/texas_sqlite", "master"}}
 ]}.
 {plugins, [texas_rebar]}.
 {texas, "config/{{ name }}.config"}.
