--- a/rebar.config
+++ b/rebar.config
@@ -2,13 +2,16 @@
 {escript_shebang,"#!/usr/bin/env escript\n"}.
 {escript_comment,"%%\n"}.
 {escript_emu_args, "%%! +pc unicode\n"}.
-{escript_incl_apps, [eutils, rebar, erlgit, sh, erlsemver, erlydtl, merl, inflector, erlconf]}.
+{escript_incl_apps, [eutils, rebar, erlgit, sh, erlsemver, erlydtl, merl, inflector, erlconf, getopt, color]}.
 
 {deps, [
-  {eutils, ".*", {git, "https://github.com/emedia-project/eutils", "master"}},
-  {rebar, ".*", {git, "https://github.com/rebar/rebar", {tag, "2.5.0"}}},
-  {erlgit, ".*", {git, "https://github.com/gleber/erlgit", "master"}},
-  {erlydtl, ".*", {git, "https://github.com/erlydtl/erlydtl", "master"}},
-  {inflector, ".*", {git, "https://github.com/azukiapp/inflector", "master"}},
-  {erlconf, ".*", {git, "https://github.com/emedia-project/erlconf", "master"}}
+  {eutils, ".*", {git, "https://github.com/emedia-project/eutils", {branch, "master"}}},
+  {rebar, ".*", {git, "https://github.com/rebar/rebar", {tag, "2.5.1"}}},
+  {erlsemver, ".*", {git, "https://github.com/gleber/erlsemver", {branch, master}}},
+  {erlgit, ".*", {git, "https://github.com/gleber/erlgit", {branch, "master"}}},
+  {erlydtl, ".*", {git, "https://github.com/erlydtl/erlydtl", {branch, "master"}}},
+  {inflector, ".*", {git, "https://github.com/azukiapp/inflector", {branch, "master"}}},
+  {erlconf, ".*", {git, "https://github.com/emedia-project/erlconf", {branch, "master"}}},
+  {getopt, "", {git, "https://github.com/jcomellas/getopt.git", {branch, "master"}}},
+  {color, ".*", {git, "https://github.com/julianduque/erlang-color.git", {branch, "master"}}}
 ]}.
