--- a/rebar_templates/paris_rebar.config
+++ b/rebar_templates/paris_rebar.config
@@ -29,5 +29,5 @@
   "apps/*"
 ]}.
 {deps, [
-  {paris, ".*", {git, "https://github.com/emedia-project/paris", "master"}}
+  {paris, ".*", {git, "https://github.com/emedia-project/paris", {branch, "cowboy2"}}}
 ]}.
