--- a/rebar_templates/paris_rebar_mysql.config
+++ b/rebar_templates/paris_rebar_mysql.config
@@ -29,9 +29,9 @@
   "apps/*"
 ]}.
 {deps, [
-  {paris, ".*", {git, "https://github.com/emedia-project/paris", "master"}},
-  {texas, ".*", {git, "https://github.com/emedia-project/texas", "master"}},
-  {texas_mysql, ".*", {git, "https://github.com/emedia-project/texas_mysql", "master"}}
+  {paris, ".*", {git, "https://github.com/emedia-project/paris", {branch, "cowboy2"}}},
+  {texas, ".*", {git, "https://github.com/emedia-project/texas", {branch, "master"}}},
+  {texas_mysql, ".*", {git, "https://github.com/emedia-project/texas_mysql", {branch, "master"}}}
 ]}.
 {plugins, [texas_rebar]}.
 {texas, "config/{{ name }}.config"}.
