--- a/rebar_templates/paris-pg.template
+++ b/rebar_templates/paris-pg.template
@@ -20,6 +20,8 @@
 {dir, "{{name}}/config"}.
 {dir, "{{name}}/test"}.
 {template, "paris_README.md", "{{name}}/README.md"}.
+{template, "paris_bowerrc", "{{name}}/.bowerrc"}.
+{template, "paris_bower.json", "{{name}}/bower.json"}.
 {file, "paris_start.sh", "{{name}}/{{name}}"}.
 {chmod, 8#00770, "{{name}}/{{name}}"}.
 {template, "paris_rebar_pg.config", "{{name}}/rebar.config"}.
