--- a/rebar_templates/paris-sqlite.template
+++ b/rebar_templates/paris-sqlite.template
@@ -24,7 +24,8 @@
 {template, "paris_bower.json", "{{name}}/bower.json"}.
 {file, "paris_start.sh", "{{name}}/{{name}}"}.
 {chmod, 8#00770, "{{name}}/{{name}}"}.
-{template, "paris_rebar_sqlite.config", "{{name}}/rebar.config"}.
+{template, "paris_rebar.config-sqlite", "{{name}}/rebar.config"}.
+{template, "paris_xrel.config-sqlite", "{{name}}/xrel.config"}.
 {template, "paris_Makefile_texas", "{{name}}/Makefile"}.
 {file, "paris_gitignore", "{{name}}/.gitignore"}.
 {template, "paris_app.config-sqlite", "{{name}}/config/{{name}}.config"}.
@@ -36,6 +37,8 @@
 {file, "paris_img_erlang.png", "{{name}}/apps/{{name}}/priv/static/img/erlang.png"}.
 {file, "paris_rebar", "{{name}}/rebar"}.
 {chmod, 8#00770, "{{name}}/rebar"}.
+{file, "paris_xrel", "{{name}}/xrel"}.
+{chmod, 8#00770, "{{name}}/xrel"}.
 {file, "paris_gitkeep", "{{name}}/apps/{{name}}/src/models/.gitkeep"}.
 {file, "paris_gitkeep", "{{name}}/apps/{{name}}/src/mailers/.gitkeep"}.
 {file, "paris_gitkeep", "{{name}}/apps/{{name}}/priv/ssl/.gitkeep"}.
