--- a/rebar_templates/paris.template
+++ b/rebar_templates/paris.template
@@ -25,6 +25,7 @@
 {file, "paris_start.sh", "{{name}}/{{name}}"}.
 {chmod, 8#00770, "{{name}}/{{name}}"}.
 {file, "paris_rebar.config", "{{name}}/rebar.config"}.
+{template, "paris_xrel.config", "{{name}}/xrel.config"}.
 {template, "paris_Makefile", "{{name}}/Makefile"}.
 {file, "paris_gitignore", "{{name}}/.gitignore"}.
 {template, "paris_app.config", "{{name}}/config/{{name}}.config"}.
@@ -36,6 +37,8 @@
 {file, "paris_img_erlang.png", "{{name}}/apps/{{name}}/priv/static/img/erlang.png"}.
 {file, "paris_rebar", "{{name}}/rebar"}.
 {chmod, 8#00770, "{{name}}/rebar"}.
+{file, "paris_xrel", "{{name}}/xrel"}.
+{chmod, 8#00770, "{{name}}/xrel"}.
 {file, "paris_gitkeep", "{{name}}/apps/{{name}}/src/models/.gitkeep"}.
 {file, "paris_gitkeep", "{{name}}/apps/{{name}}/src/mailers/.gitkeep"}.
 {file, "paris_gitkeep", "{{name}}/apps/{{name}}/priv/ssl/.gitkeep"}.
